# rclone-precache

./: .gitignore  .goreleaser.yml  Cargo.toml  README.md  cache.go  go.mod  main.go  server.go  size.go
.github/workflows/: goreleaser.yml  rust.yml
frontend/: index.html
src/: cache_manager.rs  directory_sizer.rs  handlers.rs  local_backend.rs  main.rs  models.rs  server.rs  storage_backend.rs  webdav_backend.rs
