[package]
name = "rclone-precache"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
parking_lot = "0.12"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"